Fri Oct 27 21:01:45 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added -s, --select. Let's you pick which window to grab by
	clicking on it, or you can draw a rectangle and grab that area :-)
	Also, while scrot has the mouse grabbed, hitting any key will
	cancel the shot and release it.
	* Plus, something import won't do, if you set a delay, you can
	choose the window or area first, then the delay occurs before the
	shot is taken.

Thu Oct 26 20:37:08 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Patch from richlowe to show countdown with delay (-c,
	--count). Cheers bud.

Thu Oct 26 15:22:22 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added -d, --delay option to wait before shooting.

Thu Oct 26 14:09:52 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Created scrot.
