@@ -1,3 +1,7 @@
+Sun Oct 29 01:02:16 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Added -q, --quality for setting compression quality.
+
 Fri Oct 27 21:01:45 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Added -s, --select. Let's you pick which window to grab by
